_k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: awair-exporter
spec:
  type: ClusterIP
  selector:
    app: awair-exporter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
